[gd_scene load_steps=4 format=3 uid="uid://bgh183yp2hi7y"]

[ext_resource type="FontFile" uid="uid://bwpw01hs740nk" path="res://assets/sprietes/fonts/BitcountSingle-VariableFont_CRSV,ELSH,ELXP,slnt,wght.ttf" id="1_37p78"]
[ext_resource type="Script" uid="uid://bn2yk3l0c6ywe" path="res://hud.gd" id="1_64ctp"]
[ext_resource type="Texture2D" uid="uid://wo1nkokxlwq0" path="res://assets/sprietes/start_button.png" id="3_8sq4i"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_64ctp")

[node name="Score" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -56.0
offset_top = -32.0
offset_bottom = 7.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.23158088, 0.65951943, 0.99999994, 1)
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 31
text = "0"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StartButton" type="TextureButton" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 8.0
anchor_top = 4.8
anchor_right = 8.0
anchor_bottom = 4.8
offset_left = -48.0
offset_top = -16.0
offset_right = 48.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_8sq4i")

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Message" type="Label" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -26.5
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="start_game" from="." to="." method="new_game"]
[connection signal="pressed" from="Control/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
